--- a/Lesson06.html
+++ b/Lesson06.html
@@ -293,12 +293,23 @@
                     <sub>8</sub>&nbsp; =
                     <sup>3</sup>⁄
                     <sub>4</sub>). Students also recognize fractions that are equivalent to whole
-                    numbers. (e.g., 3/1, 4/2)</li>
+                    numbers. (e.g.,
+                    <sup>3</sup>⁄
+                    <sub>1</sub>,
+                    <sup>4</sup>⁄
+                    <sub>2</sub>)</li>
                   <li>
                     <b>Comparing fractions:</b>&nbsp;Students compare the size of fractions to
                     determine which goes first on the number line of which is closer to one.
-                    (e.g., 11/12 is only 1/12 away from one so it is closer than ⅞ because
-                    it is smaller than ⅛)</li>
+                    (e.g.,
+                    <sup>11</sup>⁄
+                    <sub>12</sub>&nbsp; is only
+                    <sup>1</sup>⁄
+                    <sub>12</sub>&nbsp; away from one so it is closer than
+                    <sup>7</sup>⁄
+                    <sub>8</sub>&nbsp; because it is smaller than
+                    <sup>1</sup>⁄
+                    <sub>8</sub>)</li>
                 </ol>
               </div>
               <div class="col-md-4">
@@ -391,8 +402,11 @@
                   and the number of jumps JiJi will take indicates the numerator?</li>
                 <li>What fractions are easy for you to visualize on the number line between
                   0 and 1? Between 2 and 3?</li>
-                <li>What do we know about the distance from 0 to ¼ and the distance between
-                  1 and 1¼?</li>
+                <li>What do we know about the distance from 0 to
+                  <sup>1</sup>⁄
+                  <sub>4</sub>&nbsp; and the distance between 1 and 1
+                  <sup>1</sup>⁄
+                  <sub>4</sub>?</li>
                 <li>Name a fraction that is closer to 1 than this fraction.</li>
               </ul>
             </div>
@@ -459,22 +473,35 @@
               <li>What does a number line need in order to be accurate?</li>
               <li>What strategy can you use to compare these two fractions and then place
                 them accurately on the number line?</li>
-              <li>Where is 1 (½, 2, 0, 1½) on your number line? How can this help you place
-                other numbers on your number line?</li>
+              <li>Where is 1 (
+                <sup>1</sup>⁄
+                <sub>2</sub>, 2, 0, 1
+                <sup>1</sup>⁄
+                <sub>2</sub>) on your number line? How can this help you place other numbers
+                on your number line?</li>
               <li>Are there any fractions you know that can help you determine where to
-                put this fraction (e.g., 25/12) on the number line?</li>
+                put this fraction (e.g.,
+                <sup>25</sup>⁄
+                <sub>12</sub>) on the number line?</li>
             </ul>
             <h4>What questions will help you uncover your students’ thinking?</h4>
             <ul>
               <li>Describe what you have done so far?</li>
               <li>How can you convince me that this fraction should be placed here on the
                 number line?</li>
-              <li>Does the distance between 0 and ¼ have to be the same length as the distance
-                between 1½ and 1¾? Why?</li>
+              <li>Does the distance between 0 and
+                <sup>1</sup>⁄
+                <sub>4</sub>&nbsp; have to be the same length as the distance between 1
+                <sup>1</sup>⁄
+                <sub>2</sub>&nbsp; and 1
+                <sup>3</sup>⁄
+                <sub>4</sub>? Why?</li>
               <li>How did you decide to divide your number line?</li>
               <li>Did you use benchmark fractions to help you place any of these fractions?
                 Explain.</li>
-              <li>How did you determine where to place 1½?</li>
+              <li>How did you determine where to place 1
+                <sup>1</sup>⁄
+                <sub>2</sub>?</li>
             </ul>
             <h4>What questions will help advance student thinking?</h4>
             <ul>
@@ -508,14 +535,46 @@
                 line.
                 <ol type="a">
                   <li>“I started with a number line that went just past 2 because I knew that
-                    25/12 is 1/12 greater than 2 and I knew that 11/12 was 1/12 less than one
-                    so I put it the same distance to the left of 1 as the distance from 2 to
-                    25/12 .”</li>
-                  <li>“I knew that 3/6 is equal to ½ so I put it half way between 0 and 1. Then
-                    I knew that ¾ is halfway between ½ and 1.”</li>
-                  <li>“I knew that 14/8 was 2/8 or ¼ less than 2 which is equivalent to 16/8.”</li>
-                  <li>“I knew that 11/12 is only 1/12less than 1 and ⅞ is ⅛ less than 1, so
-                    11/12 is closer to 1.”</li>
+                    <sup>25</sup>⁄
+                    <sub>12</sub>&nbsp; is
+                    <sup>1</sup>⁄
+                    <sub>12</sub>&nbsp; greater than 2 and I knew that
+                    <sup>11</sup>⁄
+                    <sub>12</sub>&nbsp; was
+                    <sup>1</sup>⁄
+                    <sub>12</sub>&nbsp; less than one so I put it the same distance to the left
+                    of 1 as the distance from 2 to
+                    <sup>25</sup>⁄
+                    <sub>12</sub>.”</li>
+                  <li>“I knew that
+                    <sup>3</sup>⁄
+                    <sub>6</sub>&nbsp; is equal to
+                    <sup>1</sup>⁄
+                    <sub>2</sub>&nbsp; so I put it half way between 0 and 1. Then I knew that
+                    <sup>3</sup>⁄
+                    <sub>4</sub>&nbsp; is halfway between
+                    <sup>1</sup>⁄
+                    <sub>2</sub>&nbsp; and 1.”</li>
+                  <li>“I knew that
+                    <sup>14</sup>⁄
+                    <sub>8</sub>&nbsp; was
+                    <sup>2</sup>⁄
+                    <sub>8</sub>&nbsp; or
+                    <sup>1</sup>⁄
+                    <sub>4</sub>&nbsp; less than 2 which is equivalent to
+                    <sup>16</sup>⁄
+                    <sub>8</sub>.”</li>
+                  <li>“I knew that
+                    <sup>11</sup>⁄
+                    <sub>12</sub>&nbsp; is only
+                    <sup>1</sup>⁄
+                    <sub>12</sub>&nbsp; less than 1 and
+                    <sup>7</sup>⁄
+                    <sub>8</sub>&nbsp; is
+                    <sup>1</sup>⁄
+                    <sub>8</sub>&nbsp; less than 1, so
+                    <sup>11</sup>⁄
+                    <sub>12</sub>&nbsp; is closer to 1.”</li>
                 </ol>
                 <div class="row mrg-xsmall">
                   <div class="col-md-4">
@@ -561,12 +620,20 @@
               <li>Which strategy is more efficient? Why?</li>
               <li>Why did you use the benchmark 1 to help you determine where to place these
                 two fractions?</li>
-              <li>You knew that 6/3 is greater than 3/6. What else do you need to know in
-                order to place them on your number line? Explain.</li>
+              <li>You knew that
+                <sup>6</sup>⁄
+                <sub>3</sub>&nbsp; is greater than
+                <sup>3</sup>⁄
+                <sub>6</sub>. What else do you need to know in order to place them on your
+                number line? Explain.</li>
               <li>How does the distance between these two numbers compare?</li>
               <li>Why is it important to pay attention to the spaces between numbers on
                 a number line?</li>
-              <li>What is another name for this point? (1½ or 3/2)</li>
+              <li>What is another name for this point? (1
+                <sup>1</sup>⁄
+                <sub>2</sub>&nbsp; or
+                <sup>3</sup>⁄
+                <sub>2</sub>)</li>
               <li>How is counting the unit fractions like counting whole numbers?</li>
             </ul>
             <h4>Identify what you want students to take away from the discussion.</h4>
@@ -582,10 +649,10 @@
               <li>Students understand that equivalent fractions share the same point on
                 a number line.</li>
               <li>Students understand that when they divide a number line into halves each
-                iterated half is one more than the one to the left of it (i.e., ½, 2/2,
-                3/2).</li>
-              <li>Students understand that one-half to the right of 1 is 1½ and one-half
-                to the right of 2 is 2½, etc..</li>
+                iterated half is one more than the one to the left of it (i.e., <sup>1</sup>⁄<sub>2</sub>, <sup>2</sup>⁄<sub>2</sub>,
+                <sup>3</sup>⁄<sub>2</sub>).</li>
+              <li>Students understand that one-half to the right of 1 is 1<sup>1</sup>⁄<sub>2</sub>&nbsp; and one-half
+                to the right of 2 is 2<sup>1</sup>⁄<sub>2</sub>, etc..</li>
               <li>Students understand that two different number lines do not need to have
                 the same distance between 0 and 1. However, on one number line the distance
                 from 0 to 1 must be the same as the distance from 5 to 6 and the distance
