lease enter the commit message for your changes. Lines starting

--- a/Lesson07.html
+++ b/Lesson07.html
@@ -1,4 +1,4 @@
-<html><head></head><body>﻿
+<html><head></head><body>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -57,7 +57,9 @@
               <li>Justify why their descriptions are correct and how the two fractions are
                 equivalent.</li>
               <li>Reason from the whole to the parts (1 cut into 4 equal parts) and from
-                the part to the whole (four of this shape &lt;¼&gt; makes the whole.)</li>
+                the part to the whole (four of this shape &lt;
+                <sup>1</sup>⁄
+                <sub>4</sub>&gt; makes the whole.)</li>
             </ul>
           </div>
         </div>
@@ -75,9 +77,9 @@
             <p>After making tangrams with the students (see appendix B), challenge students
               to identify what fraction of the original square each piece represents.
               Cooperative groups work well with this task. (Option: read
-              <span style="text-decoration: underline">The Warlord’s Puzzle</span>by Virginia Pilegard.) Compare different strategies
-              for identifying the unit fraction represented by each tangram piece and
-              how to prove they are labelled correctly.</p>
+              <span style="text-decoration: underline">The Warlord’s Puzzle</span>&nbsp;by Virginia Pilegard.) Compare different
+              strategies for identifying the unit fraction represented by each tangram
+              piece and how to prove they are labelled correctly.</p>
           </div>
         </div>
         <div class="row">
@@ -90,9 +92,14 @@
             <h4>Common Core Content Standards</h4>
             <p class="ts-large">Develop understanding of fractions as numbers</p>
             <p>
-              <b>3.NF.A.1</b>&nbsp;Understand a fraction 1/b as the quantity formed by
-              1 part when a whole is partitioned into b equal parts; understand a fraction
-              a/b as the quantity formed by a parts of size 1/b.</p>
+              <b>3.NF.A.1</b>&nbsp;Understand a fraction
+              <sup>1</sup>⁄
+              <sub>b</sub>&nbsp; as the quantity formed by 1 part when a whole is partitioned
+              into b equal parts; understand a fraction
+              <sup>a</sup>⁄
+              <sub>b</sub>&nbsp; as the quantity formed by a parts of size
+              <sup>1</sup>⁄
+              <sub>b</sub>.</p>
             <p>
               <b>3.NF.A.3</b>&nbsp;Explain equivalence of fractions in special cases, and
               compare fractions by reasoning about their size.</p>
@@ -101,8 +108,16 @@
               they are the same size, or the same point on a number line.</p>
             <p>
               <b>3.NF.A.3.B</b>&nbsp;Recognize and generate simple equivalent fractions,
-              e.g., 1/2 = 2/4, 4/6 = 2/3. Explain why the fractions are equivalent, e.g.,
-              by using a visual fraction model.</p>
+              e.g.,
+              <sup>1</sup>⁄
+              <sub>2</sub>&nbsp; =
+              <sup>2</sup>⁄
+              <sub>4</sub>&nbsp;,
+              <sup>4</sup>⁄
+              <sub>6</sub>&nbsp; =
+              <sup>2</sup>⁄
+              <sub>3</sub>. Explain why the fractions are equivalent, e.g., by using a visual
+              fraction model.</p>
             <p>
               <b>4.NF.A.1</b>&nbsp;Explain why a fraction a/b is equivalent to a fraction
               (n × a)/(n × b) by using visual fraction models, with attention to how
@@ -120,8 +135,10 @@
                 solving them.</p>
               <ul>
                 <li>Are these shapes all sevenths? Why or why not?</li>
-                <li>How can you use what you know (this triangle is ¼ of the square) to figure
-                  out what fraction of the whole these other pieces are?</li>
+                <li>How can you use what you know (this triangle is
+                  <sup>1</sup>⁄
+                  <sub>4</sub>&nbsp; of the square) to figure out what fraction of the whole
+                  these other pieces are?</li>
               </ul>
             </div>
             <div class="list-whead">
@@ -177,13 +194,20 @@
               relationships among different shapes, e.g. “If 2 medium triangles make
               a large triangle and 4 large triangles make the whole square, then it takes
               8 medium triangles to make the whole square. That means the medium triangle
-              must be ⅛ of the whole square.” Students construct an understanding of
-              unit fractions and equivalence by composing and decomposing the ‘whole’
+              must be
+              <sup>1</sup>⁄
+              <sub>8</sub>&nbsp; of the whole square.” Students construct an understanding
+              of unit fractions and equivalence by composing and decomposing the ‘whole’
               and it’s fractional parts. They compose the whole, e.g. “it takes four
-              of this large triangles to make the whole, so it must be ¼ and since it
-              takes 2 of this medium triangle to make a large, then it must be ⅛,l” and
-              decompose it, “e.g. cutting the square into four equal triangles makes
-              each of these triangles ¼.”</p>
+              of this large triangles to make the whole, so it must be
+              <sup>1</sup>⁄
+              <sub>4</sub>&nbsp; and since it takes 2 of this medium triangle to make a large,
+              then it must be
+              <sup>1</sup>⁄
+              <sub>8</sub>,” and decompose it, “e.g. cutting the square into four equal triangles
+              makes each of these triangles
+              <sup>1</sup>⁄
+              <sub>4</sub>.”</p>
           </div>
         </div>
       </div>
@@ -230,8 +254,10 @@
               <div class="col-md-8">
                 <ol>
                   <li>Students readily identify the number of colored pieces in the puzzle and
-                    explain how the denominator (1/n) partitioned (cut) the whole triangle
-                    into n-equal pieces and the numerator colored that many pieces.</li>
+                    explain how the denominator (
+                    <sup>1</sup>⁄
+                    <sub>n</sub>) partitioned (cut) the whole triangle into n-equal pieces and
+                    the numerator colored that many pieces.</li>
                   <li>Student visualizes alternative ways to partition the whole triangle and
                     explains how she can visually combine the unit fractions into larger unit
                     fractions. Student may use rough sketches to demonstrate alternative partitions
@@ -254,22 +280,29 @@
             <div class="row mrg-small">
               <div class="col-md-8">
                 <ol>
-                  <li>Build It!: Student identifies the largest triangles as fourths (¼) by
-                    creating the ‘whole’ square using four triangles. Then he builds the whole
-                    square using eight medium triangles and identifies them as eighths. There
-                    are not enough of the smallest triangles (1/16ths) within a group to build
-                    the whole square.</li>
+                  <li>Build It!: Student identifies the largest triangles as fourths (
+                    <sup>1</sup>⁄
+                    <sub>4</sub>) by creating the ‘whole’ square using four triangles. Then he
+                    builds the whole square using eight medium triangles and identifies them
+                    as eighths. There are not enough of the smallest triangles (
+                    <sup>1</sup>⁄
+                    <sub>16</sub>ths) within a group to build the whole square.</li>
                   <li>Reason Multiplicatively: Student takes one large triangle and iterates
                     it four times mentally or physically without using 4 triangles. Once these
                     triangles are labeled, student places medium triangle on top of large triangle
                     and notices that this is half of the large triangle. She reasons that if
-                    it takes two medium triangles to make the large triangle (¼) then it should
-                    take eight to make the whole square and label it ⅛. This approach can be
-                    extended to the smallest triangles. The square and parallelogram pose a
-                    bigger challenge.</li>
+                    it takes two medium triangles to make the large triangle (
+                    <sup>1</sup>⁄
+                    <sub>4</sub>) then it should take eight to make the whole square and label
+                    it
+                    <sup>1</sup>⁄
+                    <sub>8</sub>. This approach can be extended to the smallest triangles. The
+                    square and parallelogram pose a bigger challenge.</li>
                   <li>Non-congruent Pieces: Students use the smallest two triangles to build
                     the square and parallelogram to prove they have the same value as the medium
-                    triangle (⅛.)</li>
+                    triangle (
+                    <sup>1</sup>⁄
+                    <sub>8</sub>.)</li>
                   <li>Folding Square/Parallelogram: Student folds the shapes in half and see
                     that it creates the smallest triangle.</li>
                 </ol>
@@ -301,7 +334,9 @@
             <ul>
               <li>Student identifies fractions based on the total number of parts in the
                 whole regardless of the fact that they are not ‘equal parts.’ They may
-                see them all as 1/7 because the square is cut into 7 parts.</li>
+                see them all as
+                <sup>1</sup>⁄
+                <sub>7</sub>&nbsp; because the square is cut into 7 parts.</li>
               <li>Student ignore the ‘whole’ square and treat other pieces as the whole.</li>
             </ul>
           </div>
@@ -336,9 +371,13 @@
           <div class="col-md-7">
             <p>Level 3: The equilateral triangle partitioned into 4ths (trapezoids) with
               2 smaller triangles colored in can help students visually partition these
-              unit fractions (¼) into smaller units (⅛) and be able to describe the fraction
-              of the whole triangle colored in using an equivalent fraction. The prompt
-              for this puzzle makes this necessary.</p>
+              unit fractions (
+              <sup>1</sup>⁄
+              <sub>4</sub>) into smaller units (
+              <sup>1</sup>⁄
+              <sub>8</sub>) and be able to describe the fraction of the whole triangle colored
+              in using an equivalent fraction. The prompt for this puzzle makes this
+              necessary.</p>
           </div>
         </div>
         <div class="row mrg-small">
@@ -348,8 +387,12 @@
           <div class="col-md-7">
             <p>Level 3: The equilateral triangle partitioned into 6ths (trapezoids) with
               2 or 4 trapezoids colored in can help students visually combine these unit
-              fractions (⅙) into larger units (⅓) and be able to describe the fraction
-              of the whole triangle colored in using an equivalent fraction.</p>
+              fractions (
+              <sup>1</sup>⁄
+              <sub>6</sub>) into larger units (
+              <sup>1</sup>⁄
+              <sub>3</sub>) and be able to describe the fraction of the whole triangle colored
+              in using an equivalent fraction.</p>
           </div>
         </div>
         <div class="row">
@@ -365,8 +408,11 @@
                   would the animation look like if we wrote that fraction in the puzzle?</li>
                 <li>Did anyone see a different fraction describing the colored part of the
                   whole triangle?</li>
-                <li>What can we say about these different solutions/fractions? (e.g. 4/6 and
-                  ⅔)</li>
+                <li>What can we say about these different solutions/fractions? (e.g.
+                  <sup>4</sup>⁄
+                  <sub>6</sub>&nbsp; and
+                  <sup>2</sup>⁄
+                  <sub>3</sub>)</li>
               </ul>
             </div>
           </div>
@@ -450,7 +496,9 @@
             <h4>What questions will help you uncover your students’ thinking?</h4>
             <ul>
               <li>Can you describe what you have done so far?</li>
-              <li>How can you convince me that this is ⅛ ?</li>
+              <li>How can you convince me that this is
+                <sup>1</sup>⁄
+                <sub>8</sub>?</li>
               <li>How did you approach this problem? What did you do first, second…? Why?&nbsp;</li>
             </ul>
             <h4>What questions will help advance student thinking?</h4>
@@ -498,8 +546,11 @@
                     <li>Student modeled the whole square by combining like pieces, e.g. 4-fourths,
                       8-eighths, and 16-sixteenths.</li>
                     <li>Student iterated the large triangle four times to make the whole. Then
-                      they iterated two medium triangles to make ¼ and reasoned 2 for every fourth
-                      is 8. That must be ⅛.</li>
+                      they iterated two medium triangles to make
+                      <sup>1</sup>⁄
+                      <sub>4</sub>&nbsp; and reasoned 2 for every fourth is 8. That must be
+                      <sup>1</sup>⁄
+                      <sub>8</sub>.</li>
                     <li>Student used smallest triangle to find all fractions.</li>
               </ol>
               </li>
@@ -511,8 +562,13 @@
                 <ol class="list-lower-roman">
                   <li>Drawing 1 large triangle = 2 medium triangles. Showing how two triangles
                     can fit inside one larger triangle.</li>
-                  <li>Writing equations that show equivalence: ¼ = 2/8 = 4/16 and noticing relationships
-                    among equivalent fractions.</li>
+                  <li>Writing equations that show equivalence:
+                    <sup>1</sup>⁄
+                    <sub>4</sub>&nbsp;=
+                    <sup>2</sup>⁄
+                    <sub>8</sub>&nbsp; =
+                    <sup>4</sup>⁄
+                    <sub>16</sub>&nbsp; and noticing relationships among equivalent fractions.</li>
                 </ol>
                 <div class="row mrg-xsmall">
                   <div class="col-md-4">
@@ -555,8 +611,9 @@
                 solution strategies and the instructional goals.</p>
               <ul>
                 <li>How did you figure out the value of each of the tangram pieces?</li>
-                <li>How do you know that the large triangle is ¼? Can you prove it to the
-                  class?</li>
+                <li>How do you know that the large triangle is
+                  <sup>1</sup>⁄
+                  <sub>4</sub>? Can you prove it to the class?</li>
                 <li>Can you prove that the square, parallelogram, and medium triangle all
                   have the same fractional value even though they are not congruent shapes?</li>
                 <li>How can we represent the relationships among the tangram pieces and between
@@ -574,7 +631,7 @@
                   unit fractions and the whole.</li>
                 <li>Students reason about the value of a unit fraction by identifying relationships
                   among known fractions of different values: if two a’s are equivalent to
-                  one b and b is ¼ the whole, then a must be ⅛ because it takes four b’s
+                  one b and b is <sup>1</sup>⁄<sub>4</sub>&nbsp; the whole, then a must be <sup>1</sup>⁄<sub>8</sub>&nbsp; because it takes four b’s
                   to make the whole and eight a’s.</li>
                 <li>Students develop strategies for identifying the fractional value of non-congruent
                   shapes within the same ‘whole’ area.</li>
