--- a/Lesson07.html
+++ b/Lesson07.html
@@ -631,8 +631,11 @@
                   unit fractions and the whole.</li>
                 <li>Students reason about the value of a unit fraction by identifying relationships
                   among known fractions of different values: if two a’s are equivalent to
-                  one b and b is <sup>1</sup>⁄<sub>4</sub>&nbsp; the whole, then a must be <sup>1</sup>⁄<sub>8</sub>&nbsp; because it takes four b’s
-                  to make the whole and eight a’s.</li>
+                  one b and b is
+                  <sup>1</sup>⁄
+                  <sub>4</sub>&nbsp; the whole, then a must be
+                  <sup>1</sup>⁄
+                  <sub>8</sub>&nbsp; because it takes four b’s to make the whole and eight a’s.</li>
                 <li>Students develop strategies for identifying the fractional value of non-congruent
                   shapes within the same ‘whole’ area.</li>
                 <li>Students represent equivalence among fourths, eighths, and sixteenths
